--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Aiden Lambert",
   "license": "ISC",
   "dependencies": {
-    "bleno": "npm:@abandonware/bleno@^0.5.1-3"
+    "bleno": "npm:@abandonware/bleno@^0.5.1-3",
+    "uuid": "^8.3.2"
   }
 }
